# zmatrix

./: .coderider-review.toml  .gitignore  .gitlab-ci.yml  1.txt  Cargo.toml  LICENSE  README.MD
.github/workflows/: coverage.yml
benches/: bench_cos_matrix.rs  bench_matrix.rs  bench_matrix_calculate.rs  bench_quaternion.rs  bench_scalar.rs  bench_sum.rs  bench_vector3.rs
benches/dense/: column_vectorTest.rs
benches/utils/: random_matrix.rs  simdTest.rs
examples/: example_angular_relations.rs  example_cross_product.rs  example_energy.rs  example_force.rs  example_magnetic_angular_velocity.rs  example_magnetic_moment.rs  example_new_operations.rs  example_physics.rs  example_power.rs  example_torque.rs  example_vector_quantity.rs  example_vector_quantity_restriction.rs  example_vectors.rs  examples1.rs  examples_dense.rs
src/: constant.rs  dense.rs  lib.rs  spatial_geometry.rs  utils.rs  zmatrix.rs
src/dense/: column_vector.rs  error.rs  initial.rs  operation.rs  shape.rs  util.rs
src/physics/: basic.rs
src/physics/basic/: acceleration.rs  angular.rs  angular_acceleration.rs  angular_momentum.rs  angular_velocity.rs  area.rs  coef.rs  distance.rs  energy.rs  force.rs  magnetic_angular_velocity.rs  magnetic_induction.rs  magnetic_moment.rs  mass.rs  momentum.rs  power.rs  torque.rs  vector.rs  velocity.rs  volume.rs
src/physics/basic/vector/: acceleration.rs  angular.rs  angular_acceleration.rs  angular_momentum.rs  angular_velocity.rs  area.rs  (+12 more)
src/spatial_geometry/: cos_matrix.rs  euler_angles.rs  quaternion.rs  t_a.rs
src/utils/: float.rs  simd.rs
