[package]
name = "zmatrix"
version = "0.2.1"
edition = "2021"
authors = ["Treagzhao"]
license = "MIT"
description = "This is a matrix calculation lib"

[dependencies]
approx = "0.5.1"
array-init = "2.1.0"
criterion = { version = "0.6.0"}
lazy_static = "1.5.0"
rand = "0.9.1"
rayon = "1.10.0"
serde = "1.0.219"

[[bench]]
name = "bench_sum"        # 对应 benches/bench_sum.rs
harness = false

[[bench]]
name = "bench_matrix_calculate"        # 对应 benches/bench_sub.rs
harness = false

[[bench]]
name = "bench_scalar"
harness = false

[[bench]]
name = "bench_cos_matrix"
harness = false

[[bench]]
name="bench_quaternion"
harness = false

[[bench]]
name="bench_vector3"
harness = false

[[bench]]
name="bench_matrix"
harness = false
